Update STM32F30x SPL to v1.1.0
Includes some patches to fix device detection issues and an incompatibility which prevented the STM32F30X device type define (used for backwards compatibility) from working

Main Changes
 * Add new startup files for the STM32F302x8 and STM32F334x8 devices for TrueSTUDIO toolchain.
 * Update startup files for EWARM toolchain to cope with compiler enhancement of the V7.10 version.
 * Add the support of the STM32F302x8 and the STM32F334x8 devices.
 * Update devices names definition to be in line with the new new STM32F30x family devices names.
   * STM32F30X  replaced by STM32F303xC.
stm32f30x.h
 * Upddate to support the new STM32F30x family devices names.
   * STM32F30X replaced by STM32F303xC
 * Update IRQn enum to support the STM32F302x8 and STM32F334x8 devices.
 * Update HSE_STARTUP_TIMEOUT value.
 * Update HSI_STARTUP_TIMEOUT value.
 * Add HRTIM peripheral registers and bits definitons.
 * Add CFGR3 registers in the SYSCFG_TypeDef structure.
 * Update peripheral base addresses to support the added peripherals: DAC2, I2C3, HRTIM.
 * Update ADC_SQR4 register bit definition.
 * Remove ADC34_CCR_TSEN and ADC34_CCR_VBATEN bits definitions.
 * Add new startup files for the STM32F302x8 and STM32F334x8 devices for the supported compilers
 * Replace startup_stm32f30x.s by startup_stm32f303xc.s file.
 * startup_stm32f30x.s file is maintained for legacy purpose.

--- a/Templates/STM32F30x_StdPeriph_Templates/Release_Notes.html
+++ b/Templates/STM32F30x_StdPeriph_Templates/Release_Notes.html
@@ -276,8 +276,8 @@ ul
 Notes for<o:p></o:p> </span><span style="font-size: 20pt; color: rgb(51, 102, 255); font-family: Verdana;">STM32F30x Standard Peripherals Library Templates (StdPeriph_Templates)<br>
 </span><span style="font-size: 20pt; font-family: Verdana;"><o:p></o:p></span><span style="font-size: 20pt; font-family: Verdana;"><o:p></o:p></span></h1>
 <p class="MsoNormal" style="text-align: center;" align="center"><span style="font-size: 10pt; font-family: Arial; color: black;">Copyright
-© 2012 STMicroelectronics</span><span style="color: black;"><u1:p></u1:p><o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align: center;" align="center"><span style="font-size: 10pt;"><img style="border: 0px solid ; width: 86px; height: 65px;" alt="" id="_x0000_i1025" src="../../_htmresc/logo.bmp"></span></p>
+© 2014 STMicroelectronics</span><span style="color: black;"><u1:p></u1:p><o:p></o:p></span></p>
+<p class="MsoNormal" style="text-align: center;" align="center"><span style="font-size: 10pt;"><img style="border: 0px solid ; width: 171px; height: 126px;" alt="" id="_x0000_i1025" src="../../_htmresc/st_logo.png"></span></p>
 </td>
 </tr>
 </tbody>
@@ -286,13 +286,15 @@ Notes for<o:p></o:p> </span><span style="font-size: 20pt; color: rgb(51, 102, 25
 <table class="MsoNormalTable" style="width: 675pt;" border="0" cellpadding="0" width="900">
 <tbody>
 <tr>
-<td style="padding: 0cm;" valign="top">
-<h2 style="background: rgb(51, 102, 255) none repeat scroll 0% 50%; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial;"><span style="font-size: 12pt; color: white;">Contents<o:p></o:p></span></h2>
-<ol style="margin-top: 0cm;" start="1" type="1">
-<li class="MsoNormal" style="color: black; margin-top: 4.5pt; margin-bottom: 4.5pt;"><span style="font-size: 10pt; font-family: Verdana;"><a href="#History">STM32F30x Standard Peripherals Library Template update history</a><o:p></o:p></span></li>
-<li class="MsoNormal" style="color: black; margin-top: 4.5pt; margin-bottom: 4.5pt;"><span style="font-size: 10pt; font-family: Verdana;"><a href="#License">License</a><o:p></o:p></span></li>
-</ol>
-            <h2 style="background: rgb(51, 102, 255) none repeat scroll 0% 50%; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial;"><a name="History"></a><span style="font-size: 12pt; color: white;">STM32F30x Standard Peripherals Library Template update history<o:p></o:p></span></h2><br><h3 style="background: rgb(51, 102, 255) none repeat scroll 0% 50%; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial; margin-right: 500pt; width: 200px;"><span style="font-size: 10pt; font-family: Arial; color: white;">V1.0.0 / 23-October-2012<o:p></o:p></span></h3>
+<td style="padding: 0cm;" valign="top"><h2 style="background: rgb(51, 102, 255) none repeat scroll 0% 50%; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial;"><span style="font-size: 12pt; color: white;">Update history<o:p></o:p></span></h2><h3 style="background: rgb(51, 102, 255) none repeat scroll 0% 50%; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial; margin-right: 500pt; width: 200px;"><span style="font-size: 10pt; font-family: Arial; color: white;">V1.1.0 / 04-April-2014<o:p></o:p></span></h3>
+
+            
+            <p class="MsoNormal" style="margin: 4.5pt 0cm 4.5pt 18pt;"><b style=""><u><span style="font-size: 10pt; font-family: Verdana; color: black;">Main
+Changes<o:p></o:p></span></u></b></p>
+
+
+            
+            <ul style="margin-top: 0cm;" type="square"><li class="MsoNormal" style="color: black; margin-top: 4.5pt; margin-bottom: 4.5pt;"><span style="color: rgb(0, 0, 0); font-family: Verdana; font-size: 13px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; display: inline ! important; float: none;">Update project templates for all the supported toolchains to add the support of the&nbsp;<span class="Apple-converted-space"></span></span><span style="color: rgb(0, 0, 0); font-family: Verdana; font-size: 13px; font-variant: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-style: italic; font-weight: bold;">STM32F302x8 and STM32F334x8 devices.</span></li></ul><h3 style="background: rgb(51, 102, 255) none repeat scroll 0% 50%; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial; margin-right: 500pt; width: 200px;"><span style="font-size: 10pt; font-family: Arial; color: white;">V1.0.0 / 23-October-2012<o:p></o:p></span></h3>
 
             
             <p class="MsoNormal" style="margin: 4.5pt 0cm 4.5pt 18pt;"><b style=""><u><span style="font-size: 10pt; font-family: Verdana; color: black;">Main
